fixed spacing between boxes

--- a/IssueTracker/static/css/view.css
+++ b/IssueTracker/static/css/view.css
@@ -93,6 +93,7 @@ div.history ul li { padding: 0px; margin: 0em 0em 0em 1em; }
 
 #desbox {
 	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 #description {
